--- a/find_point_by_NN.ipynb
+++ b/find_point_by_NN.ipynb
@@ -86,7 +86,7 @@
         "import pandas as pd\n",
         "%matplotlib inline\n",
         "\n",
-        "# 대회 데이터셋 DataFrame으로 불러오기\n",
+        "# 구글 드라이브에서 대회 데이터셋 DataFrame으로 불러오기\n",
         "from google.colab import drive\n",
         "drive.mount(\"/content/gdrive\")\n",
         "%cd /content/gdrive/My Drive\n",
